# cosmic-comp

./: BUILD_AND_TEST.md  CHANGES_SUMMARY.md  CRASH_FIX.md  Cargo.toml  DEBUG_INPUT_METHOD.md  FINAL_SUMMARY.md  IME_DEBUG_SUMMARY.md  INPUT_METHOD_CHANGES_README.md  INPUT_METHOD_SECURITY.md  Makefile  POTENTIAL_FIXES.md  QUICK_START_CHECKLIST.md  README_DEADLOCK_DEBUG.md  TEST_PLAN_FOR_HANG.md  TRACKING_10_SECOND_HANG.md  TROUBLESHOOT_NO_INPUT_METHODS.md  VIEWING_LOGS.md  WHAT_YOULL_SEE_NOW.md  debug_ime.sh  ime-diagnostics.sh  inst  install.sh  run_with_debug_logs.sh  rust-toolchain.toml  startime.sh
cosmic-comp-config/: Cargo.toml
cosmic-comp-config/src/: lib.rs
data/: input-method-keyboard-map.ron
src/: state.rs  xwayland.rs
src/backend/: mod.rs
src/backend/kms/: mod.rs
src/backend/render/: element.rs
src/config/: input_config.rs  mod.rs
src/input/: mod.rs
src/logger/: mod.rs
src/shell/: mod.rs  seats.rs  workspace.rs
src/shell/element/: mod.rs  stack.rs  surface.rs  window.rs
src/shell/focus/: target.rs
src/shell/layout/floating/: mod.rs
src/utils/: iced.rs
src/wayland/handlers/: compositor.rs  data_device.rs  decoration.rs  dmabuf.rs  drm_lease.rs  drm_syncobj.rs  foreign_toplevel_list.rs  fractional_scale.rs  idle_notify.rs  input_method.rs  keyboard_shortcuts_inhibit.rs  layer_shell.rs  pointer_constraints.rs  primary_selection.rs  relative_pointer.rs  seat.rs  session_lock.rs  shm.rs  tablet_manager.rs  xdg_activation.rs  xdg_foreign.rs  xwayland_keyboard_grab.rs  xwayland_shell.rs
src/wayland/protocols/: toplevel_info.rs
(+6 files in other folders)
