[package]
name = "cosmic-comp-config"
version = "0.1.0"
edition = "2024"

[dependencies]
cosmic-config = { git = "https://github.com/pop-os/libcosmic/" }
cosmic-randr-shell = { git = "https://github.com/pop-os/cosmic-randr/", optional = true }
input = "0.10.0"
libdisplay-info = { version = "0.3.0", optional = true }
serde = { version = "1", features = ["derive"] }
ron = "0.11"
tracing = { version = "0.1.41", features = [
    "max_level_debug",
    "release_max_level_info",
] }

[features]
default = []
output = ["libdisplay-info"]
libdisplay-info = ["dep:libdisplay-info"]
randr = ["cosmic-randr-shell", "output"]
